# skat-ml-models

./: .gitignore  LICENSE  README.md  models.json  pyproject.toml
.github/workflows/: release.yml
interface/: feature_spec.json  test_vectors.json
models/: bidding_dense.onnx  bidding_transformer.onnx  bidding_transformer.onnx.data  card_play_dense.onnx  card_play_transformer.onnx.data  game_eval_dense.onnx
scripts/: download_data.py  export_onnx.py  setup_remote.sh  train_bidding.py  train_card_play.py  train_game_eval.py
src/skat_ml/: __init__.py  constants.py  features.py  training_utils.py
src/skat_ml/datasets/: __init__.py  bidding.py  card_play.py  game_eval.py  sgf_parser.py
src/skat_ml/models/: __init__.py  base.py  bidding.py  card_play.py  game_eval.py  losses.py
